--- a/addon-inclusivo/index.html
+++ b/addon-inclusivo/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /addons/</title>
+  <title>Index of /addon-inclusivo/</title>
   </head>
   <body>
-<h1>Index of /addons/</h1>
+<h1>Index of /addon-inclusivo/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>  
+<li><a href="plugin.video.festa.inklusion-0.0.1.zip">plugin.video.festa.inklusion-0.0.1.zip</a></li> 
 </ul>
 </body>
 </html>
