--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  <body>
 	<li><a href="grupo_kodileia/">grupo_kodileia</a><td></td></li>
 	 <li><a href="addon-inclusivo/">addon-inclusivo</a><td></td></li>
+	 <li><a href="addons-ocio-y-cultura/">addons-ocio-y-cultura</a><td></td></li>
 	 <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
 	<li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
 	<li><a href="addons/">addons</a><td></td></li>
