--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
  </head>
  <body>
 	<li><a href="grupo_kodileia/">grupo_kodileia</a><td></td></li>
+	 <li><a href="addons-todo-en-uno/">addons-todo-en-uno</a><td></td></li>
 	 <li><a href="addon-inclusivo/">addon-inclusivo</a><td></td></li>
 	 <li><a href="addons-ocio-y-cultura/">addons-ocio-y-cultura</a><td></td></li>
 	 <li><a href="addons-desde-repositorio/">addons-desde-repositorio</a><td></td></li>
 	 <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
 	<li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
-	<li><a href="addons/">addons</a><td></td></li>
 	<li><a href="adultos/">adultos</a><td></td></li>
 	<li><a href="anime/">anime</a><td></td></li>
    <li><a href="ayuda/">ayuda</a><td></td></li>
