--- a/addons-cine-y-series/index.html
+++ b/addons-cine-y-series/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /addons/</title>
+  <title>Index of /addons-cine-y-series/</title>
   </head>
   <body>
-<h1>Index of /addons/</h1>
+<h1>Index of /addons-cine-y-series/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>  
+<li><a href="mediaexplorer-kodi-2.3.zip">mediaexplorer-kodi-2.3.zip</a></li>
+<li><a href="plugin.video.cristalazul-0.0.9.zip">plugin.video.cristalazul-0.0.9.zip</a></li> 
+  <li><a href="repository.balandro-1.0.3.zip">repository.balandro-1.0.3.zip</a></li>
+  <li><a href="repository.hirayasoftware-1.0.1.zip">repository.hirayasoftware-1.0.1.zip</a></li>
+  <li><a href="repository.Palantir-1.0.1.zip">repository.Palantir-1.0.1.zip</a></li>
 </ul>
 </body>
 </html>
