--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <body>
 	<li><a href="grupo_kodileia/">grupo_kodileia</a><td></td></li>
 	 <li><a href="addons-todo-en-uno/">addons-todo-en-uno</a><td></td></li>
-	 <li><a href="addons-desde-repositorio/">addons-desde-repositorio</a><td></td></li>
+	 <li><a href="addons-cine-y-series/">addons-cine-y-series</a><td></td></li>
 	 <li><a href="addons-ocio-y-cultura/">addons-ocio-y-cultura</a><td></td></li>
 	 <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
 	<li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
