--- a/addons-tv-y-deportes/index.html
+++ b/addons-tv-y-deportes/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /addons/</title>
+  <title>Index of /addons-tv-y-deportes/</title>
   </head>
   <body>
-<h1>Index of /addons/</h1>
+<h1>Index of /addons-tv-y-deportes/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>  
+<li><a href="plugin.video.cristalazul-0.0.9.zip">plugin.video.cristalazul-0.0.9.zip</a></li>
+<li><a href="repository.bugatsinho-2.4.zip">repository.bugatsinho-2.4.zip</a></li>
+  <li><a href="repository.magellan-1.2.zip">repository.magellan-1.2.zip</a></li>
 </ul>
 </body>
 </html>
