--- a/programas/index.html
+++ b/programas/index.html
@@ -8,7 +8,7 @@
   <li><a href="script.limpiarkodi.zip">script.limpiarkodi.zip</a></li>
    <li><a href="plugin.program.super.favourites.zip">plugin.program.super.favourites.zip</a></li>
    <li><a href="mod.program.plexus.zip">mod.program.plexus.zip</a></li>
-  <li><a href="script.plexus.patcher.zip">script.plexus.patcher.zip</a></li>
+  <li><a href="script.module.horus-1.1.2.zip">script.module.horus-1.1.2.zip</a></li>
 </ul>
 </body>
 </html>
