--- a/addons-cine-y-series/index.html
+++ b/addons-cine-y-series/index.html
@@ -6,6 +6,7 @@
   <body>
 <h1>Index of /addons-cine-y-series/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
+  <li><a href="plugin.video.cristalazul-3.0.0.zip">plugin.video.cristalazul-3.0.0.zip</a></li>
 <li><a href="mediaexplorer-kodi-2.3.zip">mediaexplorer-kodi-2.3.zip</a></li>
   <li><a href="repository.balandro-1.0.3.zip">repository.balandro-1.0.3.zip</a></li>
   <li><a href="repository.hirayasoftware-1.0.1.zip">repository.hirayasoftware-1.0.1.zip</a></li>
@@ -13,3 +14,4 @@
 </ul>
 </body>
 </html>
+
